// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleWorker can add and list jobs from within a job function 1`] = `
Array [
  Object {
    "handler": "testing-processing",
  },
  Object {
    "handler": "testing-processing-2",
  },
]
`;

exports[`SimpleWorker can add and list jobs from within a job function 2`] = `
Array [
  Object {
    "handler": "testing-processing",
  },
  Object {
    "handler": "testing-processing-2",
  },
]
`;

exports[`SimpleWorker can add and list jobs from within a job function 3`] = `
Array [
  Object {
    "_kind": "job_queue_connection_ready",
    "_level": "info",
  },
  Object {
    "_kind": "job_queued",
    "_level": "info",
    "job_name": "testing-processing",
  },
  Object {
    "_kind": "job_processing_ready",
    "_level": "info",
  },
  Object {
    "_kind": "job_started",
    "_level": "info",
    "job_attempt": 0,
    "job_data": Object {},
    "job_id": "1",
    "job_name": "testing-processing",
  },
  Object {
    "_kind": "job_queued",
    "_level": "info",
    "job_name": "testing-processing-2",
  },
]
`;

exports[`SimpleWorker can create a new queue instance 1`] = `
Array [
  Object {
    "_kind": "job_queue_connection_ready",
    "_level": "info",
  },
]
`;

exports[`SimpleWorker can flush the queue 1`] = `
Array [
  Object {
    "handler": "testing-processing",
    "input": "123",
  },
  Object {
    "handler": "testing-processing",
    "input": "456",
  },
  Object {
    "handler": "testing-processing",
    "input": "789",
  },
]
`;

exports[`SimpleWorker can handle an error in the job function (async) 1`] = `
Array [
  Object {
    "_kind": "job_queue_connection_ready",
    "_level": "info",
  },
  Object {
    "_kind": "job_queued",
    "_level": "info",
    "job_name": "testing-errors",
  },
  Object {
    "_kind": "job_processing_ready",
    "_level": "info",
  },
  Object {
    "_kind": "job_started",
    "_level": "info",
    "job_attempt": 0,
    "job_data": Object {},
    "job_id": "1",
    "job_name": "testing-errors",
  },
  Object {
    "_kind": "job_errored",
    "_level": "error",
    "error_message": "The CPU is on fire.",
    "error_stack": "Error: The CPU is on fire.",
    "job_attempt": 0,
    "job_data": Object {},
    "job_duration": 9001,
    "job_id": "1",
    "job_name": "testing-errors",
  },
]
`;

exports[`SimpleWorker can handle an error in the job function (sync) 1`] = `
Array [
  Object {
    "_kind": "job_queue_connection_ready",
    "_level": "info",
  },
  Object {
    "_kind": "job_queued",
    "_level": "info",
    "job_name": "testing-errors",
  },
  Object {
    "_kind": "job_processing_ready",
    "_level": "info",
  },
  Object {
    "_kind": "job_started",
    "_level": "info",
    "job_attempt": 0,
    "job_data": Object {},
    "job_id": "1",
    "job_name": "testing-errors",
  },
  Object {
    "_kind": "job_errored",
    "_level": "error",
    "error_message": "The CPU is on fire.",
    "error_stack": "Error: The CPU is on fire.",
    "job_attempt": 0,
    "job_data": Object {},
    "job_duration": 9001,
    "job_id": "1",
    "job_name": "testing-errors",
  },
]
`;

exports[`SimpleWorker can pause and resume the processing 1`] = `
Array [
  Object {
    "handler": "testing-processing",
  },
]
`;

exports[`SimpleWorker can pause and resume the processing 2`] = `
Array [
  Object {
    "_kind": "job_queue_connection_ready",
    "_level": "info",
  },
  Object {
    "_kind": "job_processing_ready",
    "_level": "info",
  },
  Object {
    "_kind": "job_queued",
    "_level": "info",
    "job_name": "testing-processing",
  },
  Object {
    "_kind": "job_started",
    "_level": "info",
    "job_attempt": 0,
    "job_data": Object {},
    "job_id": "1",
    "job_name": "testing-processing",
  },
  Object {
    "_kind": "job_processed",
    "_level": "info",
    "job_attempt": 0,
    "job_data": Object {},
    "job_duration": 9001,
    "job_id": "1",
    "job_name": "testing-processing",
  },
]
`;

exports[`SimpleWorker can queue and subsequently process a job 1`] = `
Array [
  Object {
    "handler": "testing-processing",
    "input": "123",
  },
]
`;

exports[`SimpleWorker can queue and subsequently process a job 2`] = `
Array [
  Object {
    "handler": "testing-processing",
    "input": "123",
  },
]
`;

exports[`SimpleWorker can queue and subsequently process a job 3`] = `
Array [
  Object {
    "_kind": "job_queue_connection_ready",
    "_level": "info",
  },
  Object {
    "_kind": "job_queued",
    "_level": "info",
    "job_data": Object {
      "input": "123",
    },
    "job_name": "testing-processing",
  },
  Object {
    "_kind": "job_processing_ready",
    "_level": "info",
  },
  Object {
    "_kind": "job_started",
    "_level": "info",
    "job_attempt": 0,
    "job_data": Object {
      "input": "123",
    },
    "job_id": "1",
    "job_name": "testing-processing",
  },
  Object {
    "_kind": "job_function_log_info",
    "_level": "info",
    "job_attempt": 0,
    "job_data": Object {
      "input": "123",
    },
    "job_id": "1",
    "job_name": "testing-processing",
  },
]
`;

exports[`SimpleWorker can queue and subsequently process a job 4`] = `
Array [
  Object {
    "_kind": "job_queue_connection_ready",
    "_level": "info",
  },
  Object {
    "_kind": "job_queued",
    "_level": "info",
    "job_data": Object {
      "input": "123",
    },
    "job_name": "testing-processing",
  },
  Object {
    "_kind": "job_processing_ready",
    "_level": "info",
  },
  Object {
    "_kind": "job_started",
    "_level": "info",
    "job_attempt": 0,
    "job_data": Object {
      "input": "123",
    },
    "job_id": "1",
    "job_name": "testing-processing",
  },
  Object {
    "_kind": "job_function_log_info",
    "_level": "info",
    "job_attempt": 0,
    "job_data": Object {
      "input": "123",
    },
    "job_id": "1",
    "job_name": "testing-processing",
  },
  Object {
    "_kind": "job_function_log_warn",
    "_level": "warn",
    "foo": "bar",
    "job_attempt": 0,
    "job_data": Object {
      "input": "123",
    },
    "job_id": "1",
    "job_name": "testing-processing",
  },
  Object {
    "_kind": "job_function_log_error",
    "_level": "error",
    "job_attempt": 0,
    "job_data": Object {
      "input": "123",
    },
    "job_id": "1",
    "job_name": "testing-processing",
  },
  Object {
    "_kind": "job_processed",
    "_level": "info",
    "job_attempt": 0,
    "job_data": Object {
      "input": "123",
    },
    "job_duration": 9001,
    "job_id": "1",
    "job_name": "testing-processing",
  },
]
`;

exports[`SimpleWorker can schedule jobs 1`] = `
Object {
  "handler": "testing-processing",
}
`;

exports[`SimpleWorker can timeout a long running job 1`] = `
Array [
  Object {
    "_kind": "job_queue_connection_ready",
    "_level": "info",
  },
  Object {
    "_kind": "job_queued",
    "_level": "info",
    "job_name": "testing-processing",
  },
  Object {
    "_kind": "job_processing_ready",
    "_level": "info",
  },
  Object {
    "_kind": "job_started",
    "_level": "info",
    "job_attempt": 0,
    "job_data": Object {},
    "job_id": "1",
    "job_name": "testing-processing",
  },
  Object {
    "_kind": "job_timeout",
    "_level": "error",
    "job_attempt": 0,
    "job_data": Object {},
    "job_duration": 9001,
    "job_id": "1",
    "job_name": "testing-processing",
  },
]
`;

exports[`SimpleWorker errors when the job configuration is missing while adding 1`] = `
Array [
  Object {
    "_kind": "job_queue_connection_ready",
    "_level": "info",
  },
  Object {
    "_kind": "job_errored",
    "_level": "error",
    "error_message": "Job configuration not found",
    "job_name": "not-existing",
  },
]
`;

exports[`SimpleWorker errors when the job configuration is missing while processing 1`] = `
Array [
  Object {
    "_kind": "job_queue_connection_ready",
    "_level": "info",
  },
  Object {
    "_kind": "job_queued",
    "_level": "info",
    "job_name": "not-existing",
  },
  Object {
    "_kind": "job_processing_ready",
    "_level": "info",
  },
  Object {
    "_kind": "job_errored",
    "_level": "error",
    "error_message": "Job configuration not found",
    "job_name": "not-existing",
  },
]
`;

exports[`SimpleWorker logs internal errors in the queue 1`] = `
Array [
  Object {
    "_kind": "job_queue_connection_ready",
    "_level": "info",
  },
  Object {
    "_kind": "job_queue_connection_error",
    "_level": "error",
    "error_message": "Oh no.",
    "error_stack": "Error: Oh no.",
  },
]
`;

exports[`SimpleWorker logs stalled jobs in the queue 1`] = `
Array [
  Object {
    "_kind": "job_queue_connection_ready",
    "_level": "info",
  },
  Object {
    "_kind": "job_stalled",
    "_level": "warn",
    "job_attempt": 1,
    "job_data": Object {
      "email": "pepe@me.me",
    },
    "job_id": 333,
    "job_name": "test-handler",
  },
]
`;
